# Clikky

./: CMakeLists.txt  Click.cpp  Click.h  ControllerMain.cpp  ControllerMain.h  Event.cpp  Event.h  ModelMain.cpp  ModelMain.h  MouseButtonDown.cpp  MouseButtonDown.h  MouseButtonUp.cpp  MouseButtonUp.h  Observer.h  Pause.cpp  Pause.h  Subject.h  Ui_MainWindow.h  ViewMain.cpp  ViewMain.h  main.cpp
